# 0xdaed-backend-comp-manager

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  errors.py  lifespan.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  commands.py  computers.py  outbox.py
app/db/repositories/: commands.py  computers.py
app/modules/agents/: api.py  schemas.py  service.py
app/modules/commands/: __init__.py  api.py  enums.py  registry.py  schemas.py  service.py
app/modules/dashboard/: api.py  schemas.py  service.py
app/modules/ws/: api.py  broker.py  consumers.py
app/redis/: client.py  events.py  keys.py  state_repo.py
app/shared/: pc_mapper.py
