[tool.poetry]
name = "server"
version = "0.1.0"
description = "Remote Windows fleet control backend"
authors = ["you"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
alembic = "^1.13.2"

redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
mypy = "^1.11.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.28.1"
fakeredis = "^2.34.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
